--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 /.claude
 /CLAUDE.md
+build/
+*.o
+*.a
+*.so
+*.dylib
+*.exe
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+__pycache__/
+*.pyc
+.DS_Store
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
