--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 /.claude
 /CLAUDE.md
+
+# Recruiter prep files (keep private)
+DEMO.md
+RECRUITER_CHECKLIST.md
+STREAMLIT_GUIDE.md
+
+# Build artifacts
 build/
 *.o
 *.a
@@ -10,11 +17,20 @@ CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
 Makefile
+
+# Python
 __pycache__/
 *.pyc
+streamlit_dashboard.py
+cpp_trading_wrapper.py
+
+# IDE
 .DS_Store
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+
+# Data
+data/*.csv
